apps/hound/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hound
  namespace: hound
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hound
  template:
    metadata:
      labels:
        app: hound
    spec:
      containers:
        - name: hound
          image: hperssn/hound:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: hound-data
              mountPath: /data
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            capabilities:
              add: ["SYS_RESOURCE"]
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              ephemeral-storage: 1Gi
              cpu: 500m
              memory: 512Mi

      volumes:
        - name: hound-data
          persistentVolumeClaim:
            claimName: hound-data-pvc
      nodeSelector:
        role: worker
        
---
apiVersion: v1
kind: Service
metadata:
  name: hound
  namespace: hound
spec:
  selector:
    app: hound
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hound
  namespace: hound
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: hound.lab.hpersson.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hound
                port:
                  number: 80
  tls:
    - hosts:
        - hound.lab.hpersson.com
      secretName: hound-tls
